# plugantic

./: .gitignore  LICENSE  README.md  pyproject.toml
src/plugantic/: __init__.py
